# image-updater

./: .taskcluster.yml  Cargo.toml
src/: config.rs  main.rs  overrides.rs
taskcluster/: config.yml
taskcluster/docker/image-updater/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/publish/: kind.yml
