[package]
name = "image-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
alphanumeric-sort = "1.5.3"
anyhow = "1.0.94"
dotenvy = "0.15.7"
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
oci-distribution = "0.11.0"
regex = "1.11.1"
rocket = "0.5.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "process"] }
walkdir = "2.5.0"
yaml-split = "0.4.0"
